# RayTracer

./: .gitignore
Project/: CMakeLists.txt  main.cpp
Project/Application/: Application.cpp
Project/Application/include/: Application.h
Project/RayTracer/include/: RayTracer.h
Project/Window/: MainWindow.cpp
Project/Window/include/: MainWindow.h
